2010-04-18  Per Bothner  <per@bothner.com>

	* ModuleContext.java (flag): New field.
	(IN_HTTP_SERVER, IN_SERVLET): New flags.
	(getFlags, setFlags, addFlags): New methods.
	* ModuleInfo.java (cleanupAfterCompilation): New convenience methods.

2010-04-05  Per Bothner  <per@bothner.com>

	* ModuleExp.java (evalModule1): Call module resolve and walk using
	Compilation 'process' mechanism.  This makes things both simpler
	and more robust in different scenarios, such as servlets.
	* Compilation.java (addMainClass): Don't set mustCompile - we shouldn't
	be calling addMainClass otherwise.

2010-04-02  Per Bothner  <per@bothner.com>

	* TryExp.java (apply): Add support for interpreting catch-clauses.
	(mustCompile): Now always return false.
	* CatchClause.java: Noew extends LetExpr.
	(evalVariable): New hook to get exception passed from TryExpr.apply.
	* LetExp.java (evalVariable): New hook.

2010-03-01  Per Bothner  <per@bothner.com>

	* KawaScriptEngine.java: Fix typo.

2010-02-23  Per Bothner  <per@bothner.com>

	* CompiledModule.java (evalModule(Environment,OutPort)): New method.
	Partly moved from removed kawa.standard.load#loadSource.

2010-02-21  Per Bothner  <per@bothner.com>

	* ModuleInfo.java (className): Make private.
	(getClassName): New method, uses same logic as getClassType.
	(setClassType): New method.
	* ModuleManager.java: Update accordingly.
	(searchWithClassName): Use getClassName(), which works better than
	searching with just the className field, and is the purpose of
	this particular exercise.
	* ModuleContext.java: Update accordingly.
	* Compilation.java: Update accordingly.
	* ModuleExp.java (evalModule2): Avoid code duplication by using
	ModuleContext's findInstance method.
	Do ClassMemberLocation.defineAll if we're loading a class file.

	* CompiledModule.java: New class, encapsulates a compiled module.
	* Makefile.am:  Update accordingly.
	* KawaScriptEngine.java (class KawaCompiledScript): Use CompiledModule
	class to replace two old fields.